Added topology and experiment generators, added new test to show how to use it.